--- a/app/src/main/res/navigation/todos_navigation.xml
+++ b/app/src/main/res/navigation/todos_navigation.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/todos_navigation"
     app:startDestination="@id/homePageFragment">
     <fragment
@@ -508,6 +509,27 @@
         android:id="@+id/activityPodcastFragment"
         android:name="com.uptodd.uptoddapp.ui.activitypodcast.ActivityPodcastFragment"
         android:label="@string/activity_podcast" />
+    <fragment
+        android:id="@+id/speedBoosterFragment"
+        android:name="com.uptodd.uptoddapp.media.memorybooster.MemoryBoosterFragment"
+        tools:layout="@layout/memory_booster_fragment"
+        android:label="@string/memory_booster" >
+        <action
+            android:id="@+id/action_speedBoosterFragment_to_memoryBoosterDetailsFragment"
+            app:destination="@id/memoryBoosterDetailsFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/memoryBoosterDetailsFragment"
+        android:name="com.uptodd.uptoddapp.media.memorybooster.MemoryBoosterDetailsFragment"
+        android:label="Details" />
+    <fragment
+        android:id="@+id/resourcesFragment"
+        android:name="com.uptodd.uptoddapp.media.resources.ResourceFragment"
+        android:label="@string/resources" />
+
+
+
     <!--    <fragment-->
 <!--        android:id="@+id/activityVideoFragment"-->
 <!--        android:name="com.uptodd.uptoddapp.ui.activitysample.ActivityVideoFragment"-->
