--- a/app/src/main/res/layout/fragment_memory_booster_details.xml
+++ b/app/src/main/res/layout/fragment_memory_booster_details.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="memoryBoosterViewModel"
-            type="com.uptodd.uptoddapp.media.memorybooster.MemoryBoosterViewModel" />
+            type="com.uptodd.uptoddapp.media.memorybooster.MemoryBoosterDetailsViewModel" />
     </data>
 
     <ScrollView
@@ -112,6 +112,7 @@
                             android:id="@+id/music_prev"
                             android:layout_width="32dp"
                             android:layout_height="32dp"
+                            android:visibility="gone"
                             android:layout_gravity="center"
                             android:layout_marginStart="1dp"
                             android:layout_marginEnd="1dp"
@@ -170,6 +171,7 @@
                             android:layout_height="32dp"
                             android:layout_gravity="center"
                             android:layout_marginStart="1dp"
+                            android:visibility="gone"
                             android:layout_marginEnd="1dp"
                             android:layout_weight="1"
                             android:background="@android:color/transparent"
