--- a/app/src/main/res/layout/memory_booster_fragment.xml
+++ b/app/src/main/res/layout/memory_booster_fragment.xml
@@ -77,6 +77,7 @@
                 android:background="@drawable/music_player_background"
                 android:padding="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/poem_list_recycler_view">
