--- a/app/src/main/res/layout/activity_podcast_webinar.xml
+++ b/app/src/main/res/layout/activity_podcast_webinar.xml
@@ -23,7 +23,6 @@
             android:id="@+id/scrollView3"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginBottom="50dp"
             app:layout_constraintBottom_toBottomOf="@id/btnPlayPause"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -83,6 +82,7 @@
             android:background="@color/buttonBlue"
             android:text="Play"
             android:textColor="@color/timeDisplayWhite"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
