--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -174,11 +174,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="12dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginBottom="32dp"
                 android:background="@drawable/doctor_refer_details_bg"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView_profileImage">
 
@@ -200,20 +200,23 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginEnd="32dp"
                     android:fontFamily="@font/montserrat"
                     android:text="@string/name"
                     android:textColor="@color/textGrey"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/editText_phone" />
+                    app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
                 <EditText
                     android:id="@+id/editText_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginEnd="32dp"
                     android:background="@drawable/round_edittext"
                     android:focusable="false"
@@ -237,22 +240,22 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginEnd="32dp"
+                    android:layout_marginTop="10dp"
                     android:fontFamily="@font/montserrat"
                     android:text="@string/email_id"
                     android:textColor="@color/textGrey"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/editText_toys" />
+                    app:layout_constraintTop_toBottomOf="@+id/editText_name" />
 
                 <EditText
                     android:id="@+id/editText_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginEnd="32dp"
                     android:background="@drawable/round_edittext"
                     android:focusable="false"
@@ -275,13 +278,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginEnd="32dp"
                     android:fontFamily="@font/montserrat"
                     android:text="@string/phone"
                     android:textColor="@color/textGrey"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/editText_email" />
 
@@ -290,7 +294,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginEnd="32dp"
                     android:background="@drawable/round_edittext"
                     android:focusable="false"
@@ -313,21 +317,23 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginEnd="32dp"
                     android:fontFamily="@font/montserrat"
                     android:text="@string/permanent_address"
                     android:textColor="@color/textGrey"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/editText_name" />
+                    app:layout_constraintTop_toBottomOf="@+id/editText_phone" />
 
                 <EditText
                     android:id="@+id/editText_address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginEnd="32dp"
                     android:background="@drawable/round_edittext"
                     android:focusable="false"
@@ -356,6 +362,7 @@
                     android:text="@string/financial_mail"
                     android:textColor="@color/textGrey"
                     android:textSize="14sp"
+                    android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/editText_address" />
@@ -378,6 +385,7 @@
                     android:paddingBottom="5dp"
                     android:textColor="@color/textGrey"
                     android:textSize="14sp"
+                    android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -403,11 +411,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginBottom="32dp"
                 android:background="@drawable/doctor_refer_details_bg"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/layout_personalInfo">
 
@@ -485,7 +493,7 @@
                             android:layout_marginTop="32dp"
                             android:layout_marginEnd="32dp"
                             android:fontFamily="@font/montserrat"
-                            android:text="@string/kids_age"
+                            android:text="Kid's age (months)"
                             android:textColor="@color/textGrey"
                             android:textSize="14sp"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -648,7 +656,7 @@
                     android:layout_marginTop="32dp"
                     android:layout_marginEnd="32dp"
                     android:fontFamily="@font/montserrat"
-                    android:text="@string/current_subscribed_plan"
+                    android:text="Subscription Start Date"
                     android:textColor="@color/textGrey"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -660,9 +668,45 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
-                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="32dp"
-                    android:layout_marginBottom="32dp"
+                    android:background="@drawable/round_edittext"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    android:fontFamily="@font/montserrat"
+                    android:inputType="textPersonName"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="5dp"
+                    android:paddingRight="10dp"
+                    android:paddingBottom="5dp"
+                    android:textColor="@color/textGrey"
+                    android:textSize="14sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView_subscriptionStartDate" />
+
+                <TextView
+                    android:id="@+id/textView_subscriptionStartDate2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginEnd="32dp"
+                    android:fontFamily="@font/montserrat"
+                    android:text="Subscription End Date"
+                    android:textColor="@color/textGrey"
+                    android:textSize="14sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/editText_subscriptionStartDate" />
+
+                <EditText
+                    android:id="@+id/editText_subscriptionStartDate2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginBottom="5dp"
                     android:background="@drawable/round_edittext"
                     android:focusable="false"
                     android:focusableInTouchMode="false"
@@ -678,7 +722,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView_subscriptionStartDate" />
+                    app:layout_constraintTop_toBottomOf="@+id/textView_subscriptionStartDate2" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
