--- a/app/src/main/res/layout/poem_fragment.xml
+++ b/app/src/main/res/layout/poem_fragment.xml
@@ -222,6 +222,7 @@
                         android:paddingEnd="4dp"
                         android:scaleType="fitCenter"
                         android:src="@drawable/clock"
+                        android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@id/music_next"
