--- a/app/src/main/res/layout/fragment_capture_image.xml
+++ b/app/src/main/res/layout/fragment_capture_image.xml
@@ -14,6 +14,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:keepScreenOn="true"
+            app:cameraEngine="camera2"
+            app:cameraPreview="glSurface"
             app:cameraAudio="off"
             app:cameraFacing="back"
             app:cameraMode="picture"
@@ -29,7 +31,6 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
