--- a/app/src/main/res/layout/music_list_item.xml
+++ b/app/src/main/res/layout/music_list_item.xml
@@ -12,13 +12,14 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:textColor="#000"
-        android:textSize="16sp"
+        android:textStyle="bold"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <HorizontalScrollView
         android:layout_width="match_parent"
-        android:layout_height="144dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
