--- a/app/src/main/res/layout/gif_dialog.xml
+++ b/app/src/main/res/layout/gif_dialog.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -7,6 +8,7 @@
     android:layout_marginStart="32dp"
     android:layout_marginEnd="32dp"
     android:background="@drawable/round_dialog_background">
+
 
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/gif_dialog_gif"
@@ -22,6 +24,7 @@
     <TextView
         android:id="@+id/gif_dialog_text"
         android:layout_width="match_parent"
+        android:maxLines="5"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="48dp"
