--- a/app/src/main/res/layout/create_user_account.xml
+++ b/app/src/main/res/layout/create_user_account.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:padding="8dp"
+    android:paddingStart="8dp"
+    android:paddingEnd="8dp"
+    android:paddingBottom="8dp"
     tools:context="com.example.hackingwork.auth.CreateUserAccount">
 
     <LinearLayout
@@ -22,7 +24,7 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="150dp"
                 android:contentDescription="@string/app_login"
                 app:srcCompat="@drawable/hacking_main_icon" />
 
@@ -30,12 +32,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="4dp"
                 android:fontFamily="@font/allerta"
                 android:text="@string/app_create_acc"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
