Add Logic Data Get Account detail status:Successfully

--- a/app/src/main/res/layout/create_user_account.xml
+++ b/app/src/main/res/layout/create_user_account.xml
@@ -150,6 +150,7 @@
                 app:ccp_showPhoneCode="true" />
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/phone_Layout"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
