--- a/hackerstudent/src/main/res/navigation/auth_nav_graph.xml
+++ b/hackerstudent/src/main/res/navigation/auth_nav_graph.xml
@@ -82,6 +82,10 @@
             app:argType="string" />
         <argument android:name="message"
             app:argType="string" />
+        <argument
+            android:name="flag"
+            app:argType="boolean"
+            android:defaultValue="false" />
     </dialog>
     <action android:id="@+id/action_global_passwordDialog" app:destination="@id/passwordDialog" />
 </navigation>
